--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Jing Feng
+title: J's Planet
 email: fengjingla@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -19,3 +19,6 @@ github_username:  tatltuae
 
 # Build settings
 markdown: kramdown
+
+# standard jekyll configuration
+permalink: /:categories/:title
